Feature: selfmonitoring instrumented classes (#30)
* feature: add MetricFactory

* little refactor

* test: add MetricFactoryTest

* refactor MetricFactoryTest

* test: add self-monitoring int-test

* fix sonarcloud issues